@@ -1,2 +1,0 @@
-#! /usr/bin/dh-exec
-${LIBDIR}/lpbuildd/check_implicit_pointer_functions.py	usr/share/launchpad-buildd/bin/check-implicit-pointer-functions
